main/default/objects/SPIM_KPI__c/SPIM_KPI__c.object-meta.xml
<CustomObject>
    <description>Supplier Information Performance Management KPI</description>
    <label>SIPM KPI</label>
    <nameField>
        <label>SPIM KPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SIPM KPI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>