main/default/objects/SPIM_KPI__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Category</description>
    <inlineHelpText>Category</inlineHelpText>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>SIPM KPI</relationshipLabel>
    <relationshipName>SIPM_KPI</relationshipName>
    <type>Lookup</type>
</CustomField>