main/default/objects/SPIM_KPI__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <description>Formula</description>
    <inlineHelpText>Formula</inlineHelpText>
    <label>Formula</label>
    <length>50</length>
    <type>Text</type>
</CustomField>