main/default/objects/SPIM_KPI__c/fields/KPI_Description__c.field-meta.xml
<CustomField>
    <fullName>KPI_Description__c</fullName>
    <description>KPI Description</description>
    <inlineHelpText>KPI Description</inlineHelpText>
    <label>KPI Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>