main/default/objects/SPIM_KPI__c/fields/KPI_Target__c.field-meta.xml
<CustomField>
    <fullName>KPI_Target__c</fullName>
    <description>KPI Target</description>
    <inlineHelpText>KPI Target</inlineHelpText>
    <label>KPI Target</label>
    <length>20</length>
    <type>Text</type>
</CustomField>