main/default/objects/SPIM_KPI__c/fields/KPINo__c.field-meta.xml
<CustomField>
    <fullName>KPINo__c</fullName>
    <description>KPI Identifier</description>
    <displayFormat>KPI-{000000}</displayFormat>
    <inlineHelpText>KPI Identifier</inlineHelpText>
    <label>KPINo</label>
    <type>AutoNumber</type>
</CustomField>