main/default/objects/SPIM_KPI__c/fields/Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Qualifier__c</fullName>
    <label>Qualifier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>People</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>