main/default/objects/SPIM_KPI__c/fields/RowNumber__c.field-meta.xml
<CustomField>
    <fullName>RowNumber__c</fullName>
    <description>Row Number</description>
    <inlineHelpText>Row Number</inlineHelpText>
    <label>RowNumber</label>
    <length>4</length>
    <type>Text</type>
</CustomField>