main/default/objects/SPIM_KPI__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <description>Unit of KPI Measure</description>
    <inlineHelpText>Unit of KPI Measure</inlineHelpText>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Numeric</fullName>
            </value>
            <value>
                <fullName>Enumaration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>