main/default/objects/SPIM_KPI__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Qualifier__c</columns>
    <columns>Category__c</columns>
    <columns>KPI_Target__c</columns>
    <columns>UOM__c</columns>
    <columns>RowNumber__c</columns>
    <columns>Formula__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>